# SCTestBuild

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Libraries/: CMakeLists.txt
