CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT (APP)

# add the OpenVSP specific cmake files to module path
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

INCLUDE( SetupC++11 )

IF(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "amd64")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
ENDIF()

IF( LIBRARY_PATH )
	INCLUDE( ${LIBRARY_PATH}/Libraries_Config.cmake )
ENDIF( LIBRARY_PATH )

IF(WIN32)
    ADD_DEFINITIONS(/D _CRT_SECURE_NO_WARNINGS /D "NOMINMAX" /MP )
ENDIF(WIN32)




SET( STEPCODE_PREFIX_PATH ${STEPCODE_INSTALL_DIR} ${CMAKE_PREFIX_PATH} )

FIND_PACKAGE(STEPCODE REQUIRED)

MESSAGE( STATUS "STEPCODE_INCLUDE_DIR " ${STEPCODE_INCLUDE_DIR})
MESSAGE( STATUS "STEPCODE_LIBRARIES " ${STEPCODE_LIBRARIES})
